Fixed navigation style and overflowing of main

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -41,3 +41,7 @@ form{
 .avatar{
   border-radius: 25px;
 }
+
+.main {
+  margin-bottom: 4rem;
+}
